--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "vue": "^2.6.11",
     "vue-analytics": "^5.22.1",
     "vue-fullpage.js": "^0.1.5",
-    "vue-gtag": "^1.9.1"
+    "vue-gtag": "^1.9.1",
+    "vue-i18n": "^8.22.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.4.0",
