--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "vue-analytics": "^5.22.1",
     "vue-fullpage.js": "^0.1.5",
     "vue-gtag": "^1.9.1",
-    "vue-i18n": "^8.22.4"
+    "vue-i18n": "^8.22.4",
+    "vuex": "^3.6.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.4.0",
